k8s_objects/dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp01
  labels:
    app: otushm
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pod01
  template:
    metadata:
      labels:
        app: pod01
    spec:
      containers:
      - name: container01
        image: ihaydarova/otushm:0.0.1
        ports:
        - containerPort: 8000
livenessProbe:
  httpGet:
  path: /health
  port: 8000
  initialDelaySeconds: 10
  periodSeconds: 5
readinessProbe:
  httpGet:
  path: /health
  port: 8000
  initialDelaySeconds: 5
  periodSeconds: 3
