k8s_objects/nginx_ingress.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-ingress-controller
  namespace: ingress-nginx
spec:
  selector:
    matchLabels: 
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/part-of: ingress-nginx
  template:
    metadata:
      labels: 
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/part-of: ingress-nginx
    spec:
        containers:
        - name: nginx-ingress-controller
          image: ihaydarova/otushm:0.0.1
          ports:
          - containerPort: 8000
          - containerPort: 443
