k8s_objects/pod01.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
spec:
  containers:
    - name: c01
      image: ihaydarova/otushm:0.0.1
