k8s_objects/pod02.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod02
spec:
  containers:
    - name: c01
      image: ihaydarova/otushm:latest
  nodeSelector:
    os: linux2
