k8s_objects/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service01
spec:
  selector:
    app: pod01
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
